--- a/web/Admin/View/Index/index.html
+++ b/web/Admin/View/Index/index.html
@@ -32,6 +32,7 @@
    	<?php 
         echo authCheck(MODULE_NAME.'/Keyword/get_res',cookie('id'),'<li><a href="__MODULE__/Keyword/get_res" target="right"><span class="icon-caret-right"></span>关键词详情</a></li>');
         echo authCheck(MODULE_NAME.'/Keyword/analyze',cookie('id'),'<li><a href="__MODULE__/Keyword/analyze" target="right"><span class="icon-caret-right"></span>关键词统计分析</a></li>');
+        echo authCheck(MODULE_NAME.'/Keyword/analyze',cookie('id'),'<li><a href="__MODULE__/Bestseller/analyze" target="right"><span class="icon-caret-right"></span>Best seller分类</a></li>');
      ?>
   </ul>
 </div>
